Crash in [@ mozilla::a11y::HyperTextAccessible::TransformOffset]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | fixed |
People
(Reporter: calixte, Assigned: morgan)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-8ec1467d-5754-4cd3-9049-a8b450190927.
Top 10 frames of crashing thread:
0 xul.dll unsigned int mozilla::a11y::HyperTextAccessible::TransformOffset accessible/generic/HyperTextAccessible.cpp:303
1 xul.dll mozilla::a11y::HyperTextAccessible::DOMPointToOffset accessible/generic/HyperTextAccessible.cpp:278
2 xul.dll unsigned int mozilla::a11y::HyperTextAccessible::FindLineBoundary accessible/generic/HyperTextAccessible.cpp:621
3 xul.dll mozilla::a11y::HyperTextAccessible::TextAtOffset accessible/generic/HyperTextAccessible.cpp:761
4 xul.dll mozilla::a11y::ia2AccessibleText::get_textAtOffset accessible/windows/ia2/ia2AccessibleText.cpp:300
5 ole32.dll Invoke com\ole32\com\txf\callframe\amd64\stubless.asm:289
6 mozglue.dll mozilla::TimeStamp::NowFuzzy mozglue/misc/TimeStamp.cpp:132
7 @0xc8bb54dd5f
8 kernelbase.dll SetEvent
9 xul.dll nsresult `anonymous namespace'::HandoffRunnable::Run ipc/mscom/MainThreadHandoff.cpp:127
There are 2 crashes (from 2 installations) in nightly 71 with buildid 20190926094200. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1177014.
[1] https://hg.mozilla.org/mozilla-central/rev?node=7aa2279f941c
CCing Arnaud who pinged me on IRC and is affected by this crash
Comment 2•6 years ago
|
||
FYI, this issue prevents some tabs to be loaded. To make me able to write on Bugzilla I was forced to turn off the Orca screen reader, reload the page and then restart Orca.
Comment 3•6 years ago
|
||
FYI, this is not a Windows specific issue, I'm on Debian Linux 9 "Stretch" and I'm encountering the issue.
Best regards.
| Assignee | ||
Comment 4•6 years ago
|
||
(In reply to Alex ARNAUD from comment #2)
FYI, this issue prevents some tabs to be loaded. To make me able to write on Bugzilla I was forced to turn off the Orca screen reader, reload the page and then restart Orca.
hello! thanks for the info; is there a particular page on bugzilla you're using when this crash occurs, or do all pages crash?
Comment 5•6 years ago
|
||
Alex, also is there a specific action you do with orca that makes it crash? The more details the better!
| Assignee | ||
Comment 6•6 years ago
|
||
Comment 7•6 years ago
|
||
Hello,
As the page doesn't seem to be loaded I don't have the time to do any user action.
This bugzilla bug page maked Firefox to crash.
Today morning with latest Nightly, I don't reproduce the crash.
Best regards.
Comment 8•6 years ago
|
||
Hi,
I have the bug too. Here is some reproduction steps:
- Open qwant
- Run a search
- Browse the result and click on one of them
Instead of opening the contents of the new tab, it displays the crash tab reporter.
Then if I issue alt-d, then enter, the URL opens in the current tab as expected.
regards
| Assignee | ||
Updated•6 years ago
|
Comment 10•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•4 years ago
|
Description
•