Bug 1584465: Null check parent accessible before attribute check to cover root case. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D47488